// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate Main event pull_request main.js 1`] = `
"cspell-action
Pull Request
1/5 ./.eslintrc.js (???.??ms)
2/5 ./package.json (???.??ms)
3/5 ./fixtures/sampleCode/ts/sample.ts (???.??ms)
4/5 ./action.yaml (???.??ms)
5/5 ./README.md (???.??ms)
Done.
"
`;

exports[`Validate Main event pull_request_with_files main.js 1`] = `
"cspell-action
Pull Request
1/2 ./fixtures/sampleCode/ts/sample.ts (???.??ms)
2/2 ./action.yaml (???.??ms)
Done.
"
`;

exports[`Validate Main event push main.js 1`] = `
"cspell-action
Push
1/1 ./.editorconfig (???.??ms)
Done.
"
`;
